--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,36 +1,36 @@
 {% include top.html %}
 
 <body class="wrap">
-    
+
   {% include header.html %}
 
-  <section>  
-      
+  <section>
+
       <div class="container">
-        
+
           {{ content }}
-        
+
             <div class="row" align="center" style="padding-top: 10px; padding-botto: 10px;">
                 <div class="pagination">
                   <ul>
                   {% if page.previous %}
-                    <li class="prev"><a href="{{BASE_PATH}}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+                    <li class="prev"><a href="{{ site.baseurl }}/{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
                   {% else %}
                     <li class="prev disabled"><a>&larr; Previous</a></li>
                   {% endif %}
-                    <li><a href="{{BASE_PATH}}blog/">Return to Main Blog Page</a></li>
+                    <li><a href="{{ site.baseurl }}/blog/">Return to Main Blog Page</a></li>
                   {% if page.next %}
-                    <li class="next"><a href="{{BASE_PATH}}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+                    <li class="next"><a href="{{ site.baseurl }}/{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
                   {% else %}
                     <li class="next disabled"><a>Next &rarr;</a>
                   {% endif %}
                   </ul>
                 </div>
             </div>
-                
+
         </div>
-        
-  </section>  
+
+  </section>
 
   {% include footer.html %}
   {% include analytics.html %}
