--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,24 @@
 <header>
-<a href="https://github.com/kinlane/dev-hub"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1050;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="index.html">Dev Hub</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="api.html">APIs</a></li>
-                    <li><a href="data.html">Data</a></li>
-                    <li><a href="code.html">Code</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="support.html">Support</a></li>
-                    <li><a href="roadmap.html">Roadmap</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-
+  <a href="https://github.com/jbender/dev-hub">
+    <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1050;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+  </a>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+          <div class="container">
+              <a class="brand" href="{{ site.baseurl }}/">Dev Hub</a>
+              <div class="nav-collapse collapse">
+                  <ul class="nav">
+                      <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
+                      <li><a href="{{ site.baseurl }}/api.html">APIs</a></li>
+                      <li><a href="{{ site.baseurl }}/data.html">Data</a></li>
+                      <li><a href="{{ site.baseurl }}/code.html">Code</a></li>
+                      <li><a href="{{ site.baseurl }}/gallery.html">Gallery</a></li>
+                      <li><a href="{{ site.baseurl }}/support.html">Support</a></li>
+                      <li><a href="{{ site.baseurl }}/roadmap.html">Roadmap</a></li>
+                      <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
 </header>
