--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,13 +1,24 @@
-<script src="{{ site.baseurl }}/js/jquery.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-transition.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-alert.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-modal.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-dropdown.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-scrollspy.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-tab.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-tooltip.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-popover.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-button.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-collapse.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-carousel.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap-typeahead.js"></script>
+{% unless page.no_scripts %}
+  <script src='{{ site.baseurl }}/js/jquery.slideto.min.js' type='text/javascript'></script>
+
+  <script src='{{ site.baseurl }}/js/jquery.wiggle.min.js' type='text/javascript'></script>
+
+  <script src='{{ site.baseurl }}/js/jquery.ba-bbq.min.js' type='text/javascript'></script>
+
+  <script src='//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js' type='text/javascript'></script>
+
+  <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.string/3.0.2/underscore.string.min.js' type='text/javascript'></script>
+
+  <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js' type='text/javascript'></script>
+
+  <script src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js' type='text/javascript'></script>
+
+  <script src='//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js' type='text/javascript'></script>
+
+  <script src='{{ site.baseurl }}/js/injector.js' type='text/javascript'></script>
+
+  <script src='{{ site.baseurl }}/js/utilities.js' type='text/javascript'></script>
+
+  <script src="//maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
+{% endunless %}
