convert to markdown, cleaner urls

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,12 @@
 <footer>
-    
+
     <hr />
-    
+
     <ul class="legal">
-        <li><a href="/dev-hub/legal/terms-of-use.html">Terms of Use</a></li>
-        <li><a href="/dev-hub/legal/privacy-policy.html">Privacy Policy</a></li>
-        <li><a href="/dev-hub/legal/branding-guidelines.html">Branding Guidelines</a></li>
-        <li><a href="/dev-hub/sitemap.html">Sitemap</a></li>
-    </ul>    
+        <li><a href="{{site.baseurl}}/terms-of-use.html">Terms of Use</a></li>
+        <li><a href="{{site.baseurl}}/privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="{{site.baseurl}}/branding-guidelines.html">Branding Guidelines</a></li>
+        <li><a href="{{site.baseurl}}/sitemap.html">Sitemap</a></li>
+    </ul>
 
 </footer>
-    
