--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <link href='{{ site.baseurl }}/css/custom.css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='{{ site.baseurl }}/css/hightlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
   {% for file in page.additional_styles %}
-  <link href='{{ file }}' rel='stylesheet' type='text/css'/>
+  <link href='{{ site.baseurl }}/css/{{ file }}' rel='stylesheet' type='text/css'/>
   {% endfor %}
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' type='text/javascript'></script>
