--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
-  <a href="https://github.com/jbender/dev-hub">
-    <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1050;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+  <a href="https://github.com/jbender/dev-hub" style="position: fixed; top: 0; right: 0; border: 0; z-index: 1050;">
+    <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
   </a>
   <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -9,13 +9,13 @@
               <div class="nav-collapse collapse">
                   <ul class="nav">
                       <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
-                      <li><a href="{{ site.baseurl }}/api.html">APIs</a></li>
-                      <li><a href="{{ site.baseurl }}/data.html">Data</a></li>
-                      <li><a href="{{ site.baseurl }}/code.html">Code</a></li>
-                      <li><a href="{{ site.baseurl }}/gallery.html">Gallery</a></li>
-                      <li><a href="{{ site.baseurl }}/support.html">Support</a></li>
-                      <li><a href="{{ site.baseurl }}/roadmap.html">Roadmap</a></li>
-                      <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
+                      <li><a href="{{ site.baseurl }}/apis">APIs</a></li>
+                      <li><a href="{{ site.baseurl }}/data">Data</a></li>
+                      <li><a href="{{ site.baseurl }}/code">Code</a></li>
+                      <li><a href="{{ site.baseurl }}/gallery">Gallery</a></li>
+                      <li><a href="{{ site.baseurl }}/support">Support</a></li>
+                      <li><a href="{{ site.baseurl }}/roadmap">Roadmap</a></li>
+                      <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
                   </ul>
               </div>
           </div>
