style footer with copyright

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
 <footer>
-
-    <hr />
-
-    <ul class="legal">
+  <div class="container text-center">
+    <ul>
         <li><a href="{{site.baseurl}}/terms-of-use.html">Terms of Use</a></li>
         <li><a href="{{site.baseurl}}/privacy-policy.html">Privacy Policy</a></li>
         <li><a href="{{site.baseurl}}/branding-guidelines.html">Branding Guidelines</a></li>
         <li><a href="{{site.baseurl}}/sitemap.html">Sitemap</a></li>
     </ul>
-
+    <p>&copy; {{ site.time | date: '%Y' }} {{ site.publisher }}</p>
+  </div>
 </footer>
