--- a/css/custom.scss
+++ b/css/custom.scss
@@ -3,8 +3,28 @@
 
 body {
   padding-top: 60px;
-  padding-bottom: 40px;
 }
+
+footer {
+  margin-top: 30px;
+  background-color: #CCC;
+  color: #777;
+  padding: 20px 0;
+  ul {
+    list-style: none;
+  }
+  li {
+    display: inline;
+    & + li {
+      margin-left: 1em;
+    }
+  }
+  a {
+    color: #888;
+    text-decoration: underline;
+  }
+}
+
 .sidebar-nav {
   padding: 9px 0;
 }
