css-only github fork ribbon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,12 @@
   <meta name="description" content="This is a prototype site for anyone starting a developer site">
   <meta name="author" content="Kin Lane and Jonathan Bender">
 
+  <!-- "Fork me" ribbons, should probably remove in production -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+  <!--[if IE]>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+  <![endif]-->
+
   <!-- Le styles -->
   <link href='//maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css' rel='stylesheet' type='text/css' />
   <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"> -->
