--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <header>
-  <a href="https://github.com/jbender/dev-hub" style="position: fixed; top: 0; right: 0; border: 0; z-index: 1050;">
-    <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
-  </a>
+  <!-- "Fork me" ribbon, should probably remove in production -->
+  <div class="github-fork-ribbon-wrapper right">
+      <div class="github-fork-ribbon">
+          <a href="https://github.com/jbender/dev-hub">Fork me on GitHub</a>
+      </div>
+  </div>
   <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
           <div class="container">
