--- a/css/custom.scss
+++ b/css/custom.scss
@@ -25,6 +25,11 @@ footer {
   }
 }
 
+.github-fork-ribbon-wrapper,
+.github-fork-ribbon {
+  position: fixed;
+}
+
 .sidebar-nav {
   padding: 9px 0;
 }
